[package]
name = "zotero-export"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.24", features = ["derive", "string"] }
dirs = "5.0.1"
eyre = "0.6.12"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
